--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "dev stage for MIS homepage",
   "main": "index.js",
+  "engines": {
+    "node": "10.16.0"
+  },
   "scripts": {
     "compile:sass": "node-sass --watch assets/scss -o dist/css/*.min.css --output-style compressed",
     "render": "http-server"
@@ -18,6 +21,7 @@
   },
   "homepage": "https://github.com/jaeyson/mispage#readme",
   "devDependencies": {
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "http-server": "^0.12.1"
   }
 }
